--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<meta name="author" content="marimbondo.me - Web com gominho :)" />
 		<link rel="apple-touch-icon" href="apple-touch-icon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="stylesheet" href="_css/normalize.css">
-        <link rel="stylesheet" href="_css/main.css">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">
         <link type="text/plain" rel="author" href="humans.txt" />
 
         <!--[if lt IE 9]>
@@ -66,7 +66,7 @@
 	    </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.0.min.js"><\/script>')</script>        
-        <script src="_js/main.js"></script>
+        <script src="js/main.js"></script>
 		<script>(function(d, s, id) {
 		  var js, fjs = d.getElementsByTagName(s)[0];
 		  if (d.getElementById(id)) return;
