--- a/index.html
+++ b/index.html
@@ -4,27 +4,27 @@
 <!--[if ie 8]>         <html class="lt-ie9" lang="pt-BR"> <![endif]-->
 <!--[if gt ie 8]><!--> <html lang="pt-BR" itemscope itemtype="http://schema.org/Event"> <!--<![endif]-->
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <title>BrazilJS Conf 2013</title>
-        <meta name="description" content="BrazilJS Conf - A maior conferência de javascript do universo em sua edição 2013!">
-		<meta name="author" content="marimbondo.me - Web com gominho :)" />
-		<link rel="apple-touch-icon" href="apple-touch-icon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <meta name="description" content="BrazilJS Conf - A maior conferência de javascript do universo em sua edição 2013!" />
+        <meta name="author" content="marimbondo.me - Web com gominho :)" />
+        <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="stylesheet" href="css/normalize.css" />
+        <link rel="stylesheet" href="css/main.css" />
         <link type="text/plain" rel="author" href="humans.txt" />
 
         <!--[if lt IE 9]>
-			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
-		
-		<!-- OPEN GRAPH -->
-		<meta property="og:url" content="http://www.braziljs.com.br" />
-		<meta property="og:type" content="company" /> 
-		<meta property="og:title" content="BrazilJS Conf 2013!" /> 
-		<meta property="og:image" content="http://braziljs.com.br/apple-touch-icon.png" /> 
-		<meta property="og:description" content="BrazilJS Conf - A maior conferência de javascript do universo em sua edição 2013!" />		
+                <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+
+        <!-- OPEN GRAPH -->
+        <meta property="og:url" content="http://www.braziljs.com.br" />
+        <meta property="og:type" content="company" /> 
+        <meta property="og:title" content="BrazilJS Conf 2013!" /> 
+        <meta property="og:image" content="http://braziljs.com.br/apple-touch-icon.png" /> 
+        <meta property="og:description" content="BrazilJS Conf - A maior conferência de javascript do universo em sua edição 2013!" />		
 
     </head>
     <body>
