Cleaning the doctype

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html "Welcome to the biggest javascript conference in the universe! Yeah Yeah!!">
+<!DOCTYPE html>
 <!--[if lt ie 7]>      <html class="lt-ie9 lt-ie8 lt-ie7" lang="pt-BR"> <![endif]-->
 <!--[if ie 7]>         <html class="lt-ie9 lt-ie8" lang="pt-BR"> <![endif]-->
 <!--[if ie 8]>         <html class="lt-ie9" lang="pt-BR"> <![endif]-->
