Addin favicon metatag

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <meta name="description" content="BrazilJS Conf - A maior conferência de javascript do universo em sua edição 2013!" />
         <meta name="author" content="marimbondo.me - Web com gominho :)" />
         <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+        <link rel="icon" href="apple-touch-icon.png" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="css/normalize.css" />
         <link rel="stylesheet" href="css/main.css" />
