--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <![endif]-->
 
         <!-- OPEN GRAPH -->
-        <meta property="og:url" content="http://www.braziljs.com.br" />
+        <meta property="og:url" content="http://braziljs.com.br" />
         <meta property="og:type" content="company" /> 
         <meta property="og:title" content="BrazilJS Conf 2013!" /> 
         <meta property="og:image" content="http://braziljs.com.br/apple-touch-icon.png" /> 
