Fixing mobile problem of layout, and facebook data

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="BrazilJS Conf - A maior conferência de javascript do universo em sua edição 2013!" />
         <meta name="author" content="marimbondo.me - Web com gominho :)" />
         <link rel="apple-touch-icon" href="apple-touch-icon.png" />
-        <link rel="icon" href="apple-touch-icon.png" type="image/x-icon">
+        <link rel="icon" href="facebook.png" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="css/normalize.css" />
         <link rel="stylesheet" href="css/main.css" />
@@ -24,7 +24,7 @@
         <meta property="og:url" content="http://braziljs.com.br" />
         <meta property="og:type" content="company" /> 
         <meta property="og:title" content="BrazilJS Conf 2013!" /> 
-        <meta property="og:image" content="http://braziljs.com.br/apple-touch-icon.png" /> 
+        <meta property="og:image" content="http://braziljs.com.br/facebook.png" /> 
         <meta property="og:description" content="BrazilJS Conf - A maior conferência de javascript do universo em sua edição 2013!" />		
 
     </head>
