Added appid and adminid for facebook

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <meta property="og:title" content="BrazilJS Conf 2013!" /> 
         <meta property="og:image" content="http://braziljs.com.br/facebook.png" /> 
         <meta property="og:description" content="BrazilJS Conf - A maior conferência de javascript do universo em sua edição 2013!" />		
+	<meta property="fb:admins" content="1114477480" /> 
+	<meta property="fb:app_id" content="136223956547034" /> 
 
     </head>
     <body>
@@ -72,7 +74,7 @@
 		  var js, fjs = d.getElementsByTagName(s)[0];
 		  if (d.getElementById(id)) return;
 		  js = d.createElement(s); js.id = id;
-		  js.src = "//connect.facebook.net/pt_BR/all.js#xfbml=1";
+		  js.src = "//connect.facebook.net/pt_BR/all.js#xfbml=1&appId=136223956547034";
 		  fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
