Added sitename to FB

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <meta property="og:description" content="BrazilJS Conf - A maior conferência de javascript do universo em sua edição 2013!" />		
 	<meta property="fb:admins" content="1114477480" /> 
 	<meta property="fb:app_id" content="136223956547034" /> 
+	<meta property="og:site_name" content="BrazilJS Conference" />
 
     </head>
     <body>
