--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="css/normalize.css" />
         <link rel="stylesheet" href="css/main.css" />
         <link type="text/plain" rel="author" href="humans.txt" />
+        <link rel="canonical" href="http://braziljs.com.br" />
 
         <!--[if lt IE 9]>
                 <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
