Adding the eventick link and the date of the conference

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <meta property="og:title" content="BrazilJS Conf 2013!" /> 
         <meta property="og:image" content="http://braziljs.com.br/facebook.png" /> 
         <meta property="og:description" content="BrazilJS Conf - A maior conferência de javascript do universo em sua edição 2013!" />
-	<meta property="fb:admins" content="1114477480" /> 
-	<meta property="fb:app_id" content="136223956547034" /> 
-	<meta property="og:site_name" content="BrazilJS Conference" />
+		<meta property="fb:admins" content="1114477480" /> 
+		<meta property="fb:app_id" content="136223956547034" /> 
+		<meta property="og:site_name" content="BrazilJS Conference" />
 
     </head>
     <body>
@@ -57,14 +57,20 @@
 	    			<p class="disclaimer"><span itemprop="location">PORTO ALEGRE </span> · AGOSTO 2013 · BRAZIL JS · A CONFERÊNCIA · TEATRO DO BOURBON COUNTRY · BROUGHT TO YOU BY BRAZIL JS FOUNDATION · <span itemprop="description">A MAIOR CONFERÊNCIA DE JAVASCRIPT DO UNIVERSO</span> · <a href="http://www.braziljs.com.br" itemprop="url" title="BrazilJS Conf 2013">WWW.BRAZILJS.COM.BR</a></p>
 	    		</main>
 	    		<footer>
-					<p class="in-this-summer">COMING SOON</p>
-					<div id="social-networks">
-						<strong class="share-this ir ico-general">Spread the word!</strong>
-						<ul>
-							<li><div class="fb-like" data-href="http://braziljs.com.br/" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
-							<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
-							<li><div class="g-plusone" data-size="tall"></div></li>
-						</ul>
+					<p class="in-this-summer">22 E 23 DE AGOSTO</p>
+					<div class="social-container">
+						<div class="ticket-container">
+							<a href="http://eventick.com.br/braziljs-2013" target='_blank' title="Compre seu ingresso aqui!" class="ir ico-general ticket">Adquira o ingresso para a BrazilJS Conf 2013</a>
+							<span class="buy-the-ticket ir ico-general">Buy the ticket!</span>
+						</div>						
+						<div id="social-networks">
+							<strong class="share-this ir ico-general">Spread the word!</strong>
+							<ul>
+								<li><div class="fb-like" data-href="http://braziljs.com.br/" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
+								<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
+								<li><div class="g-plusone" data-size="tall"></div></li>
+							</ul>
+						</div>						
 					</div>
 	    		</footer>
 	    	</div>
