fixed issue douglas page

--- a/speakers/douglas.html
+++ b/speakers/douglas.html
@@ -9,7 +9,7 @@
         <title>Douglas Crockford - BrazilJS 2013</title>
         <meta name="description" content="BrazilJS Conf 2013 - Douglas Crockford" />
         <meta name="author" content="marimbondo.me - Web com gominho :)" />
-        <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+        <link rel="apple-touch-icon" href="../apple-touch-icon.png" />
         <link rel="icon" href="../facebook.png" type="image/x-icon">
 	    
 	    <link rel="dns-prefetch" href="//apis.google.com/">
@@ -28,7 +28,7 @@
         <![endif]-->
 
         <!-- OPEN GRAPH -->
-        <meta property="og:url" content="http://braziljs.com.br" />
+        <meta property="og:url" content="http://braziljs.com.br/speakers/douglas.html" />
         <meta property="og:type" content="Website" /> 
         <meta property="og:title" content="BrazilJS Conf 2013!" /> 
         <meta property="og:image" content="http://braziljs.com.br/facebook.png" /> 
@@ -69,7 +69,7 @@
 					<p>Doug estava lá durante o nascimento desta midia que conquista a nossa atenção e tempo, desde então, se tornou um dos precursores e líderes no JavaScript, a linguagem de programação mais popular do mundo.</p>
 					<p>Foi o descobridor do do formato JSON (JavaScript Object Notation) enquanto era o CTO de State Software, criou a ferramenta JSLint e é o autor do referenciado JavaScript: The Good Parts.</p>
 				</div>
-				<h2 class="find-me">Me encontre nas redes sociais</h2>
+				<h2 class="find-me">Nas redes sociais</h2>
 				<ul class="my-social-links">
 					<li>
 						<a class="github" href="https://github.com/douglascrockford" title="github">github</a>
