--- a/speakers/douglas.html
+++ b/speakers/douglas.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" href="../css/main.css" />
         <link rel="stylesheet" href="css/context.css" />
         <link type="text/plain" rel="author" href="humans.txt" />
-        <link rel="canonical" href="http://braziljs.com.br" />
+        <link rel="canonical" href="http://braziljs.com.br/speakers/douglas.html" />
 
         <!--[if lt IE 9]>
                 <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -69,7 +69,7 @@
 					<p>Doug estava lá durante o nascimento desta midia que conquista a nossa atenção e tempo, desde então, se tornou um dos precursores e líderes no JavaScript, a linguagem de programação mais popular do mundo.</p>
 					<p>Foi o descobridor do do formato JSON (JavaScript Object Notation) enquanto era o CTO de State Software, criou a ferramenta JSLint e é o autor do referenciado JavaScript: The Good Parts.</p>
 				</div>
-				<h2 class="find-me">Nas redes sociais</h2>
+				<h2 class="find-me">Nas redes sociais:</h2>
 				<ul class="my-social-links">
 					<li>
 						<a class="github" href="https://github.com/douglascrockford" title="github">github</a>
