Applying new changes

--- a/speakers/douglas.html
+++ b/speakers/douglas.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="../css/normalize.css" />
         <link rel="stylesheet" href="../css/main.css" />
         <link rel="stylesheet" href="css/context.css" />
-        <link type="text/plain" rel="author" href="humans.txt" />
+        <link type="text/plain" rel="author" href="../humans.txt" />
         <link rel="canonical" href="http://braziljs.com.br/speakers/douglas.html" />
 
         <!--[if lt IE 9]>
@@ -30,9 +30,9 @@
         <!-- OPEN GRAPH -->
         <meta property="og:url" content="http://braziljs.com.br/speakers/douglas.html" />
         <meta property="og:type" content="Website" /> 
-        <meta property="og:title" content="BrazilJS Conf 2013!" /> 
+        <meta property="og:title" content="Douglas Crockford - BrazilJS Conf 2013!" /> 
         <meta property="og:image" content="http://braziljs.com.br/facebook.png" /> 
-        <meta property="og:description" content="BrazilJS Conf - A maior conferência de javascript do universo em sua edição 2013!" />
+        <meta property="og:description" content="Venha assistir a palestra de Douglas Crockford na BrazilJS Conf - 2013!" />
 		<meta property="fb:admins" content="1114477480" /> 
 		<meta property="fb:app_id" content="136223956547034" /> 
 		<meta property="og:site_name" content="BrazilJS Conference" />
