--- a/speakers/marcel.html
+++ b/speakers/marcel.html
@@ -9,7 +9,7 @@
         <title>Marcel Duran - BrazilJS 2013 </title>
         <meta name="description" content="BrazilJS Conf 2013 - Marcel Duran" />
         <meta name="author" content="marimbondo.me - Web com gominho :)" />
-        <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+        <link rel="apple-touch-icon" href="../apple-touch-icon.png" />
         <link rel="icon" href="../facebook.png" type="image/x-icon">        
 	    
 	    <link rel="dns-prefetch" href="//apis.google.com/">
@@ -20,19 +20,19 @@
         <link rel="stylesheet" href="../css/normalize.css" />
         <link rel="stylesheet" href="../css/main.css" />
         <link rel="stylesheet" href="css/context.css" />
-        <link type="text/plain" rel="author" href="humans.txt" />
-        <link rel="canonical" href="http://braziljs.com.br" />
+        <link type="text/plain" rel="author" href="../humans.txt" />
+        <link rel="canonical" href="http://braziljs.com.br/speakers/marcel.html" />
 
         <!--[if lt IE 9]>
                 <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
         <!-- OPEN GRAPH -->
-        <meta property="og:url" content="http://braziljs.com.br" />
+        <meta property="og:url" content="http://braziljs.com.br/speakers/marcel.html" />
         <meta property="og:type" content="Website" /> 
-        <meta property="og:title" content="BrazilJS Conf 2013!" /> 
+        <meta property="og:title" content="Marcel Duran - BrazilJS Conf 2013!" /> 
         <meta property="og:image" content="http://braziljs.com.br/facebook.png" /> 
-        <meta property="og:description" content="BrazilJS Conf - A maior conferência de javascript do universo em sua edição 2013!" />
+        <meta property="og:description" content="Venha assistir a palestra de Marcel Duran na BrazilJS Conf - 2013!" />
 		<meta property="fb:admins" content="1114477480" /> 
 		<meta property="fb:app_id" content="136223956547034" /> 
 		<meta property="og:site_name" content="BrazilJS Conference" />
@@ -70,7 +70,7 @@
 					<p>Anteriormente, ele trabalhou com otimização da performance no desenvolvimento web de websites de grande tráficos na Yahoo! Front Page, e times de Search, onde ele aplicou pesquisas de melhoria de performance e melhores práticas tornando as páginas ainda mais rápidas.</p>
 					<p>Em sua última responsabilidade como líder de front end para o time excepcional de performance na Yahoo!, ele se dedicou ao YSlow(atualmente, seu projeto Open Source pessoal) e outras ferramentas de desenvolvimento, pesquisa e evangelismo.</p>
 				</div>
-				<h2 class="find-me">Me encontre nas redes sociais</h2>
+				<h2 class="find-me">Nas redes sociais:</h2>
 				<ul class="my-social-links">
 					<li>
 						<a class="github" href="https://github.com/marcelduran" title="github">github</a>
