--- a/speakers/thibault.html
+++ b/speakers/thibault.html
@@ -21,18 +21,18 @@
         <link rel="stylesheet" href="../css/main.css" />
         <link rel="stylesheet" href="css/context.css" />
         <link type="text/plain" rel="author" href="humans.txt" />
-        <link rel="canonical" href="http://braziljs.com.br" />
+        <link rel="canonical" href="http://braziljs.com.br/speakers/thibault.html" />
 
         <!--[if lt IE 9]>
                 <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
         <!-- OPEN GRAPH -->
-        <meta property="og:url" content="http://braziljs.com.br" />
+        <meta property="og:url" content="http://braziljs.com.br/speakers/thibault.html" />
         <meta property="og:type" content="Website" /> 
-        <meta property="og:title" content="BrazilJS Conf 2013!" /> 
+        <meta property="og:title" content="Thibault Imbert - BrazilJS 2013" /> 
         <meta property="og:image" content="http://braziljs.com.br/facebook.png" /> 
-        <meta property="og:description" content="BrazilJS Conf - A maior conferência de javascript do universo em sua edição 2013!" />
+        <meta property="og:description" content="Venha assistir a palestra de Thibault Imbert na BrazilJS Conf - 2013!" />
 		<meta property="fb:admins" content="1114477480" /> 
 		<meta property="fb:app_id" content="136223956547034" /> 
 		<meta property="og:site_name" content="BrazilJS Conference" />
@@ -71,7 +71,7 @@
 					<p>Liderando o time Scout da Adobe, tem o objetivo de mudar a forma como desenvolvedores criam profiles para conteúdos web.</p>
 					<p>Além disso, escreveu um emulador Intel 8080 em ActionScript, e o traduziu para JavaScript.</p>
 				</div>
-				<h2 class="find-me">Me encontre nas redes sociais</h2>
+				<h2 class="find-me">Nas redes sociais:</h2>
 				<ul class="my-social-links">
 					<li>
 						<a class="github" href="https://github.com/thibaultimbert/" title="github">github</a>
