--- a/speakers/angus.html
+++ b/speakers/angus.html
@@ -9,7 +9,7 @@
         <title>Angus Croll - BrazilJS 2013</title>
         <meta name="description" content="BrazilJS Conf 2013 - Angus Croll " />
         <meta name="author" content="marimbondo.me - Web com gominho :)" />
-        <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+        <link rel="apple-touch-icon" href="../apple-touch-icon.png" />
         <link rel="icon" href="../facebook.png" type="image/x-icon">
 	    
 	    <link rel="dns-prefetch" href="//apis.google.com/">
@@ -20,19 +20,19 @@
         <link rel="stylesheet" href="../css/normalize.css" />
         <link rel="stylesheet" href="../css/main.css" />
         <link rel="stylesheet" href="css/context.css" />
-        <link type="text/plain" rel="author" href="humans.txt" />
-        <link rel="canonical" href="http://braziljs.com.br" />
+        <link type="text/plain" rel="author" href="../humans.txt" />
+        <link rel="canonical" href="http://braziljs.com.br/speakers/angus.html" />
 
         <!--[if lt IE 9]>
                 <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
         <!-- OPEN GRAPH -->
-        <meta property="og:url" content="http://braziljs.com.br" />
+        <meta property="og:url" content="http://braziljs.com.br/speakers/angus.html" />
         <meta property="og:type" content="Website" /> 
-        <meta property="og:title" content="BrazilJS Conf 2013!" /> 
+        <meta property="og:title" content="Angus Croll - BrazilJS Conf 2013!" /> 
         <meta property="og:image" content="http://braziljs.com.br/facebook.png" /> 
-        <meta property="og:description" content="BrazilJS Conf - A maior conferência de javascript do universo em sua edição 2013!" />
+        <meta property="og:description" content="Venha assistir a palestra de Angus Croll na BrazilJS Conf - 2013!" />
 		<meta property="fb:admins" content="1114477480" /> 
 		<meta property="fb:app_id" content="136223956547034" /> 
 		<meta property="og:site_name" content="BrazilJS Conference" />
@@ -68,7 +68,7 @@
 				<div class="description" itemprop="description">
 					<p>Angus trabalha no core team do Twitter e é autor do Blog JavaScript, JavaScript...</p>
 				</div>
-				<h2 class="find-me">Me encontre nas redes sociais</h2>
+				<h2 class="find-me">Nas redes sociais:</h2>
 				<ul class="my-social-links">
 					<li>
 						<a class="github" href="https://github.com/angus-c" title="github">github</a>
