--- a/speakers/stoyan.html
+++ b/speakers/stoyan.html
@@ -9,7 +9,7 @@
         <title>Stoyan Stefanov - BrazilJS 2013 </title>
         <meta name="description" content="BrazilJS Conf 2013 - Stoyan Stefanov" />
         <meta name="author" content="marimbondo.me - Web com gominho :)" />
-        <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+        <link rel="apple-touch-icon" href="../apple-touch-icon.png" />
         <link rel="icon" href="../facebook.png" type="image/x-icon">        
 	    
 	    <link rel="dns-prefetch" href="//apis.google.com/">
@@ -20,19 +20,19 @@
         <link rel="stylesheet" href="../css/normalize.css" />
         <link rel="stylesheet" href="../css/main.css" />
         <link rel="stylesheet" href="css/context.css" />
-        <link type="text/plain" rel="author" href="humans.txt" />
-        <link rel="canonical" href="http://braziljs.com.br" />
+        <link type="text/plain" rel="author" href="../humans.txt" />
+        <link rel="canonical" href="http://braziljs.com.br/speakers/stoyan.html" />
 
         <!--[if lt IE 9]>
                 <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
         <!-- OPEN GRAPH -->
-        <meta property="og:url" content="http://braziljs.com.br" />
+        <meta property="og:url" content="http://braziljs.com.br/speakers/stoyan.html" />
         <meta property="og:type" content="Website" /> 
-        <meta property="og:title" content="BrazilJS Conf 2013!" /> 
+        <meta property="og:title" content="Stoyan Stefanov - BrazilJS Conf 2013!" /> 
         <meta property="og:image" content="http://braziljs.com.br/facebook.png" /> 
-        <meta property="og:description" content="BrazilJS Conf - A maior conferência de javascript do universo em sua edição 2013!" />
+        <meta property="og:description" content="Venha assistir a palestra de Stoyan Stefanov na BrazilJS Conf - 2013!" />
 		<meta property="fb:admins" content="1114477480" /> 
 		<meta property="fb:app_id" content="136223956547034" /> 
 		<meta property="og:site_name" content="BrazilJS Conference" />
@@ -71,7 +71,7 @@
 					<p>Stoyan é um engenheiro certificado Zend, posta no blog phpied.com e no jspatterns.com, também palestra em conferências e encontros ao redor do mundo (<span itemprop="performerIn">Velocity</span>, <span itemprop="performerIn">JSConf</span>, <span itemprop="performerIn">Web Directions</span>, <span itemprop="performerIn">Fronteers</span>, ...).</p>
 					<p>Búlgaro-Canadense, Stoyan vive em Los Angeles com sua mulher e suas filhas e passa a maior parte de seu tempo pedalando entre seu trabalho, escritório, praia, ensaios com sua banda, lições de voo e aniversários de crianças.</p>
 				</div>
-				<h2 class="find-me">Me encontre nas redes sociais</h2>
+				<h2 class="find-me">Nas redes sociais:</h2>
 				<ul class="my-social-links">
 					<li>
 						<a class="github" href="https://github.com/stoyan" title="github">github</a>
