Adding updated files

--- a/speakers/renato.html
+++ b/speakers/renato.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <title>Douglas Crockford - BrazilJS 2013</title>
-        <meta name="description" content="BrazilJS Conf 2013 - Douglas Crockford" />
+        <title>Renato Mangini - BrazilJS 2013</title>
+        <meta name="description" content="BrazilJS Conf 2013 - Renato Mangini" />
         <meta name="author" content="marimbondo.me - Web com gominho :)" />
         <link rel="apple-touch-icon" href="../apple-touch-icon.png" />
         <link rel="icon" href="../facebook.png" type="image/x-icon">
@@ -21,29 +21,29 @@
         <link rel="stylesheet" href="../css/main.css" />
         <link rel="stylesheet" href="css/context.css" />
         <link type="text/plain" rel="author" href="../humans.txt" />
-        <link rel="canonical" href="http://braziljs.com.br/speakers/douglas.html" />
+        <link rel="canonical" href="http://braziljs.com.br/speakers/renato.html" />
 
         <!--[if lt IE 9]>
                 <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
         <!-- OPEN GRAPH -->
-        <meta property="og:url" content="http://braziljs.com.br/speakers/douglas.html" />
+        <meta property="og:url" content="http://braziljs.com.br/speakers/renato.html" />
         <meta property="og:type" content="Website" /> 
-        <meta property="og:title" content="Douglas Crockford - BrazilJS Conf 2013!" /> 
+        <meta property="og:title" content="Renato Mangini - BrazilJS Conf 2013!" /> 
         <meta property="og:image" content="http://braziljs.com.br/facebook.png" /> 
-        <meta property="og:description" content="Venha assistir a palestra de Douglas Crockford na BrazilJS Conf - 2013!" />
+        <meta property="og:description" content="Venha assistir a palestra de Renato Mangini na BrazilJS Conf - 2013!" />
 		<meta property="fb:admins" content="1114477480" /> 
 		<meta property="fb:app_id" content="136223956547034" /> 
 		<meta property="og:site_name" content="BrazilJS Conference" />
 
     </head>
-    <body class="douglas">
+    <body class="renato">
     	<div class="wrapper">    		
 			<div id="speakers">
 				<div class="speakers-wrapper">
 					<span class="burst">&nbsp;</span>
-					<span class="speaker ir">Olá meu nome é Douglas Crockford</span>
+					<span class="speaker ir">Olá meu nome é Renato Mangini</span>
 					<div class="ballons">
 						<span class="calling what">vem ver minha palestra...</span>
 						<span class="calling where">... na <b>brazilJs conf!!</b></span>
@@ -54,28 +54,30 @@
 			</div>
 			<div class="speaker-info">
 				<div class="info-container">
-					<h1 class="name" itemprop="name">Douglas Crockford</h1>
-					<strong class="company" itemprop="worksFor">Paypal</strong>					
+					<h1 class="name" itemprop="name">Renato Mangini</h1>
+					<strong class="company" itemprop="worksFor">Google</strong>					
 				</div>
 				<div id="social-networks">
 					<strong class="like-it ir ico-general">Curtiu? Compartilha!</strong>
 					<ul>
-						<li><div class="fb-like" data-href="http://braziljs.com.br/speakers/douglas.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
-						<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/speakers/douglas.html" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
+						<li><div class="fb-like" data-href="http://braziljs.com.br/speakers/renato.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
+						<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/speakers/renato.html" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
 						<li><div class="g-plusone" data-size="tall"></div></li>
 					</ul>
 				</div>
 				<div class="description" itemprop="description">
-					<p>Doug estava lá durante o nascimento desta midia que conquista a nossa atenção e tempo, desde então, se tornou um dos precursores e líderes no JavaScript, a linguagem de programação mais popular do mundo.</p>
-					<p>Foi o descobridor do do formato JSON (JavaScript Object Notation) enquanto era o CTO de State Software, criou a ferramenta JSLint e é o autor do referenciado JavaScript: The Good Parts.</p>
+					<p>Renato Mangini é <span itemprop="jobTitle">engenheiro de software</span> da equipe de Developer Relations do Google Chrome, empreendedor, geek, mountain biker e corredor amador nas horas vagas.</p>					
 				</div>
 				<h2 class="find-me">Nas redes sociais:</h2>
 				<ul class="my-social-links">
 					<li>
-						<a class="github" href="https://github.com/douglascrockford" title="github">github</a>
+						<a class="github" href="http://github.com/mangini" title="github">github</a>
 					</li>
 					<li>
-						<a class="blog" href="http://www.crockford.com/" title="http://www.crockford.com/" itemprop="url">http://www.crockford.com/</a>
+						<a class="twitter" href="http://twitter.com/renatomangini" title="Twitter">Twitter</a>
+					</li>					
+					<li>
+						<a class="blog" href="http://www.renatomangini.com/" title="renatomangini.com" itemprop="url">http://www.renatomangini.com/</a>
 					</li>															
 				</ul>
 				<a href="//www.braziljs.com.br" title="Home" class="home-container">
