--- a/speakers/stoyan.html
+++ b/speakers/stoyan.html
@@ -11,7 +11,7 @@
         <meta name="author" content="marimbondo.me - Web com gominho :)" />
         <link rel="apple-touch-icon" href="../apple-touch-icon.png" />
         <link rel="icon" href="../facebook.png" type="image/x-icon">        
-	    
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	    <link rel="dns-prefetch" href="//apis.google.com/">
 	    <link rel="dns-prefetch" href="//www.google-analytics.com">
 	    <link rel="dns-prefetch" href="//connect.facebook.net/">
