Changes to the index file

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <link rel="canonical" href="http://braziljs.com.br" />
 
         <!--[if lt IE 9]>
-                 <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+                <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
         <!-- OPEN GRAPH -->
@@ -107,7 +107,7 @@
 						<ul class="heroes-list">
 							<li>
 								<span class="angle">&nbsp;</span>
-								<a class="douglas-crockford hero" href="#douglas-crockford" title="Saiba mais sobre o palestrante Douglas Crockford" data-layer='1'>
+								<a class="douglas-crockford hero" href="http://braziljs.com.br/speakers/douglas" title="Saiba mais sobre o palestrante Douglas Crockford" data-layer='1'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name">Douglas Crockford</strong>
@@ -133,7 +133,7 @@
 								</div>
 							</li>
 							<li>
-								<a class="hero thibault-imbert" href="#thibault" title="Saiba mais sobre o palestrante Thibault Imbert" data-layer='2'>
+								<a class="hero thibault-imbert" href="http://braziljs.com.br/speakers/thibault" title="Saiba mais sobre o palestrante Thibault Imbert" data-layer='2'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="attendee">Thibault Imbert</strong>
@@ -143,7 +143,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="hero robert-nyman" href="#robert" title="Saiba mais sobre o palestrante Robert Nyman" data-layer='3'>
+								<a class="hero robert-nyman" href="http://braziljs.com.br/speakers/robert" title="Saiba mais sobre o palestrante Robert Nyman" data-layer='3'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="attendee">Robert Nyman</strong>
@@ -161,7 +161,7 @@
 								</div>
 							</li>
 							<li>
-								<a class="hero marcel-angus" href="#marcel-angus" title="Saiba mais sobre os palestrantes Marcel Duran e Angus Croll" data-layer='4'>
+								<a class="hero marcel-angus" href="http://braziljs.com.br/speakers/angus-marcel" title="Saiba mais sobre os palestrantes Marcel Duran e Angus Croll" data-layer='4'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name">angus croll &amp;&amp; marcel duran</strong>
@@ -187,7 +187,7 @@
 								</div>
 							</li>
 							<li>
-								<a class="hero stoyan-stefanov" href="#stoyan" title="Saiba mais sobre o palestrante Stoyan Stefanov" data-layer='5'>
+								<a class="hero stoyan-stefanov" href="http://braziljs.com.br/speakers/stoyan" title="Saiba mais sobre o palestrante Stoyan Stefanov" data-layer='5'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="attendee">Stoyan Stefanov</strong>
@@ -197,7 +197,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="hero caridy-patino" href="#caridy" title="Saiba mais sobre o palestrante Caridy Patino" data-layer='6'>
+								<a class="hero caridy-patino" href="http://braziljs.com.br/speakers/caridy" title="Saiba mais sobre o palestrante Caridy Patino" data-layer='6'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="attendee">Caridy Patino</strong>
@@ -223,7 +223,7 @@
 								</div>
 							</li>
 							<li>
-								<a class="hero renato-mangini" href="#renato" title="Saiba mais sobre o palestrante Renato Mangini" data-layer='7'>
+								<a class="hero renato-mangini" href="http://braziljs.com.br/speakers/renato" title="Saiba mais sobre o palestrante Renato Mangini" data-layer='7'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="attendee">Renato Mangini</strong>
