Small fixies for tablets

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <title>BrazilJS Conf 2013</title>
-        <meta name="description" content="BrazilJS Conf - A maior conferência de javascript do universo em sua edição 2013!" />
+        <meta name="description" content="BrazilJS Conf 2013 - dias 22 e 23 de agosto! A maior conferência de javascript do universo em sua edição 2013!" />
         <meta name="author" content="marimbondo.me - Web com gominho :)" />
         <link rel="apple-touch-icon" href="apple-touch-icon.png" />
         <link rel="icon" href="facebook.png" type="image/x-icon">
@@ -27,7 +27,7 @@
         <meta property="og:type" content="Website" /> 
         <meta property="og:title" content="BrazilJS Conf 2013!" /> 
         <meta property="og:image" content="http://braziljs.com.br/facebook.png" /> 
-        <meta property="og:description" content="BrazilJS Conf - A maior conferência de javascript do universo em sua edição 2013!" />
+        <meta property="og:description" content="BrazilJS Conf 2013 - dias 22 e 23 de agosto! A maior conferência de javascript do universo em sua edição 2013!" />
 		<meta property="fb:admins" content="1114477480" /> 
 		<meta property="fb:app_id" content="136223956547034" /> 
 		<meta property="og:site_name" content="BrazilJS Conference" />
@@ -73,7 +73,7 @@
 		    			<h1 class="title ir" itemprop="name">BrazilJS Conf 2013</h1>
 			    		<strong class="the-ruler ir">Presença confirmada de Douglas Crockford</strong>
 			    		<div class="info">
-			    			<strong class="name" itemprop="attendee">DOUGLAS CROCKFORD</strong>
+			    			<strong class="name" itemprop="performer">DOUGLAS CROCKFORD</strong>
 			    			<span class="alias">THE RULER</span>
 			    			<em class="company">PAYPAL</em>
 			    		</div>
@@ -136,7 +136,7 @@
 								<a class="hero thibault-imbert" href="http://braziljs.com.br/speakers/thibault" title="Saiba mais sobre o palestrante Thibault Imbert" data-layer='2'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
-										<strong class="hero-name" itemprop="attendee">Thibault Imbert</strong>
+										<strong class="hero-name" itemprop="performer">Thibault Imbert</strong>
 										<em class="hero-company">adobe</em>										
 									</div>
 									<span class="photo">&nbsp;</span>
@@ -146,7 +146,7 @@
 								<a class="hero robert-nyman" href="http://braziljs.com.br/speakers/robert" title="Saiba mais sobre o palestrante Robert Nyman" data-layer='3'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
-										<strong class="hero-name" itemprop="attendee">Robert Nyman</strong>
+										<strong class="hero-name" itemprop="performer">Robert Nyman</strong>
 										<em class="hero-company">mozilla</em>										
 									</div>
 									<span class="photo">&nbsp;</span>
@@ -164,7 +164,7 @@
 								<a class="hero marcel-angus" href="http://braziljs.com.br/speakers/angus-marcel" title="Saiba mais sobre os palestrantes Marcel Duran e Angus Croll" data-layer='4'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
-										<strong class="hero-name">angus croll &amp;&amp; marcel duran</strong>
+										<strong class="hero-name" itemprop="performers">angus croll &amp;&amp; marcel duran</strong>
 										<em class="hero-company">twitter</em>										
 									</div>
 									<span class="photo">&nbsp;</span>
@@ -190,7 +190,7 @@
 								<a class="hero stoyan-stefanov" href="http://braziljs.com.br/speakers/stoyan" title="Saiba mais sobre o palestrante Stoyan Stefanov" data-layer='5'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
-										<strong class="hero-name" itemprop="attendee">Stoyan Stefanov</strong>
+										<strong class="hero-name" itemprop="performer">Stoyan Stefanov</strong>
 										<em class="hero-company">facebook</em>										
 									</div>
 									<span class="photo">&nbsp;</span>
@@ -200,7 +200,7 @@
 								<a class="hero caridy-patino" href="http://braziljs.com.br/speakers/caridy" title="Saiba mais sobre o palestrante Caridy Patino" data-layer='6'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
-										<strong class="hero-name" itemprop="attendee">Caridy Patino</strong>
+										<strong class="hero-name" itemprop="performer">Caridy Patino</strong>
 										<em class="hero-company">yahoo!</em>										
 									</div>
 									<span class="photo">&nbsp;</span>
@@ -226,7 +226,7 @@
 								<a class="hero renato-mangini" href="http://braziljs.com.br/speakers/renato" title="Saiba mais sobre o palestrante Renato Mangini" data-layer='7'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
-										<strong class="hero-name" itemprop="attendee">Renato Mangini</strong>
+										<strong class="hero-name" itemprop="performer">Renato Mangini</strong>
 										<em class="hero-company">google</em>										
 									</div>
 									<span class="photo">&nbsp;</span>
@@ -477,11 +477,13 @@
 						<h2 class="title ir ttl-general">Programação</h2>
 						<span class="burst">&nbsp;</span>
 						<span class="thunder">&nbsp;</span>						
-						<table class="thursday">
+						<table>
 							<caption>22 de agosto <span class="weekday">quinta-feira</span></caption>
 							<thead class="visuallyhidden">
-								<td>Horário</td>
-								<td>Palestrante</td>
+                                <tr>
+                                    <th>Horário</th>
+                                    <th>Palestrante</th>
+                                </tr>
 							</thead>
 							<tbody>
 								<tr class="event">
@@ -494,11 +496,13 @@
 								</tr>															
 							</tbody>
 						</table>
-						<table class="thursday">
+						<table class="friday">
 							<caption>23 de agosto <span class="weekday">sexta-feira</span></caption>
 							<thead class="visuallyhidden">
-								<td>Horário</td>
-								<td>Palestrante</td>
+                                <tr>
+                                    <th>Horário</th>
+                                    <th>Palestrante</th>
+                                </tr>
 							</thead>
 							<tbody>
 								<tr class="event">
@@ -522,16 +526,16 @@
 						</div>
 						<div class="info-container">
 							<h2 class="title ir ttl-general">Local</h2>	
-							<p itemprop="location" itemscope itemtype="http://schema.org/Place">
-								<span class="ttl-general how-to" itemprop="name">Teatro do Boubon Country</span>
-								<address class="address" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-									<span class="street" itemprop="streetAddress">Avenida Tulio de Rose, 80</span>
-									<span class="neighborhood">Passo da Areia</span>
-									<span class="city" itemprop="addressLocality">Porto Alegre</span>
-									<span class="cep" itemprop="postalCode">91340-110</span>
-									<a class="theater-link" itemprop="url" href="http://www.teatrodobourboncountry.com.br/" title="Saiba mais sobre o teatro do Bourbon Country" rel="external">› ir para o site</a>									
-								</address>
-							</p>
+							<div itemprop="location" itemscope itemtype="http://schema.org/Place">
+								<strong class="ttl-general how-to" itemprop="name">Teatro do Boubon Country</strong>                            	
+    							<address class="address" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+    								<span class="street" itemprop="streetAddress">Avenida Tulio de Rose, 80</span>
+    								<span class="neighborhood">Passo da Areia</span>
+    								<span class="city" itemprop="addressLocality">Porto Alegre</span>
+    								<span class="cep" itemprop="postalCode">91340-110</span>
+    								<a class="theater-link" itemprop="url" href="http://www.teatrodobourboncountry.com.br/" title="Saiba mais sobre o teatro do Bourbon Country" rel="external">› ir para o site</a>									
+    							</address>
+							</div>
 						</div>												
 					</div>
 					<div id="map">&nbsp;</div>
@@ -601,5 +605,11 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.0.min.js"><\/script>')</script>
         <script src="js/require.js" data-main="js/main"></script>
+        <script>
+            var _gaq=[['_setAccount','UA-32119524-1'],['_trackPageview']];
+            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+            s.parentNode.insertBefore(g,s)}(document,'script'));
+        </script>         
     </body>
 </html>
